--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,10 +2,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "vercel-build": "next build",
     "dev": "next dev --turbopack",
     "start": "next start"
   },
   "dependencies": {
+    "next": "15.3.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
