--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "vercel-build": "npm run prepare && next build",
+    "vercel-build": "npm install && next build",
     "dev": "next dev --turbopack",
     "start": "next start"
   },
@@ -12,7 +12,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "latest",
+    "next": "15.3.2",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
