--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "vercel-build": "npm install && next build",
+    "vercel-build": "npm ci && npm run build",
     "dev": "next dev --turbopack",
     "start": "next start"
   },
