--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
@@ -11,8 +11,8 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^15.4.0-canary.94",
-    "next-auth": "5.0.0-beta.25",
+    "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
